# likho

./: .gitignore  AI_FEATURES.md  BETA_CHECKLIST.md  BETA_TESTING_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COLLABORATION_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  MIGRATION_COMPLETE.md  README.md  SECURITY.md  TEMPLATES_ROADMAP.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  package-lock.json  schema.sql
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
admin-dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
admin-dashboard/src/: App.tsx  index.css
backend/: .dockerignore  .env.example  .gitignore  COLLABORATION_SETUP.md  Dockerfile  FIX_CORS_ERROR.md  IMMEDIATE_ACTION_PLAN.md  QUICK_START.md  RATE_LIMITING.md  README.md  SETUP_AND_MIGRATIONS.md  UV_SETUP_GUIDE.md  alembic.ini  main.py  pyproject.toml  sql_app.db  test_settings.py
backend/alembic/: env.py
backend/alembic/versions/: 001_sochix_full_schema.py  add_notifications_tables.py  e2ed076af6f4_add_page_type_and_content_to_pages.py  fix_collab_schema.py
backend/app/: __init__.py
backend/app/api/routes/: health.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  email.py  rate_limiter.py  security.py
backend/app/core/redis/: __init__.py  client.py
backend/app/dependencies/: __init__.py  rate_limit.py
backend/app/exceptions/: __init__.py  rate_limit.py
backend/app/middleware/: __init__.py  rate_limit.py  security_headers.py
backend/app/modules/: __init__.py
backend/app/modules/ai/: router.py  schemas.py  service.py
backend/app/modules/auth/: router.py  schemas.py
backend/app/modules/collaboration/: __init__.py  crud.py  models.py  router.py  schemas.py  ws.py  ws_v2.py
backend/app/modules/feedback/: __init__.py  crud.py  models.py  router.py  schemas.py
backend/app/modules/notifications/: README.md  __init__.py  integration.py  models.py  router.py  schemas.py  service.py
backend/app/modules/onboarding/: router.py  schemas.py
backend/app/modules/remote_config/: README.md  __init__.py  crud.py  models.py  router.py  s3_releases.py  schemas.py  service.py
backend/app/modules/sharing/: crud.py  models.py  router.py  schemas.py
backend/app/modules/temp_notes/: crud.py  models.py  router.py  schemas.py
backend/app/modules/users/: CHANGES_SUMMARY.md  USER_MODEL_README.md  crud.py  enums.py  models.py  router.py  schemas.py
backend/app/modules/workspaces/: crud.py  models.py  router.py  schemas.py
backend/app/services/: analytics.py
backend/migrations/: 001_remote_config.sql  add_collaboration_v2.sql
docs/: DESKTOP_DOWNLOAD_S3.md  DOCKER_RUN_EC2.md
docs-site/: package.json  source.config.ts
docs-site/app/: global.css  layout.tsx
likho-app/: .dockerignore  .env  .env.production  Dockerfile  EMBEDDINGS_README.md  MODELS_README.md  RAG_README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
likho-app/.claude/: launch.json
likho-app/src-tauri/: Cargo.toml  tauri.conf.json
likho-app/src-tauri/.cargo/: config.toml
likho-app/src-tauri/capabilities/: default.json
likho-app/src-tauri/src/: backup.rs  chunking.rs  commands.rs  db.rs  db_schema.sql  embeddings.rs  lib.rs  llm.rs  main.rs  models.rs  rag.rs  search.rs  updater.rs
likho-app/src-tauri/src/commands/: backup.rs  mod.rs  updater.rs
scripts/: docker-run-standalone.sh
(+300 files in other folders)
