[project]
name = "backend"
version = "0.1.0"
description = "Likho Backend - AI-powered Workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web Framework
    "fastapi",
    "uvicorn[standard]",
    "pydantic[email]",
    "pydantic-settings",
    
    # Database
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    
    # Authentication
    "pyjwt>=2.11.0",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
    
    # Real-time Collaboration
    "redis>=5.0.0",
    
    # AI
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    
    # Encryption
    "cryptography>=41.0.0",

    # Optional: S3 releases upload (presigned URLs)
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]
