[package]
name = "likho-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "likho_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite and vector search
rusqlite = { version = "0.32", features = ["bundled", "blob", "serde_json", "chrono"] }
# sqlite-vec extension disabled due to sqlx conflict - using native vector operations instead

# Async runtime for background tasks
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# LLM inference - currently using stub implementation
# llama-cpp-2 = { version = "0.1", features = ["metal"] }
# llama-cpp-sys-2 = "0.1"

# Text processing and chunking
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = { version = "0.16", features = ["serde"] }

# Local embeddings - Rust native implementation
fastembed = "4"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"

